@@ -26,16 +26,13 @@ test(['aa D xxx', 'bb R xxx'] => 'aa');
 test(['aa D xxx', 'bb S xxx'] => 'aa');
 test(['aa D ppp', 'ppp D xxx', 'bb D xxx'] => 'bb');
 
-TODO: {
-	local $TODO = 'not implemented';
-	test(['aa D ppp', 'ppp D xxx', 'bb R xxx'] => 'aa');
-	test(['aa R xxx', 'bb D qq1', 'qq1 D qq2', 'qq2 D xxx'] => 'bb');
-	test(['aa S xxx', 'bb D xxx'] => 'bb');
-	test(['aa S xxx', 'bb R xxx'] => 'bb');
-	test(['aa S xxx', 'bb R qqq', 'qqq D xxx'] => 'bb');
-	test(['aa S xxx', 'bb R qqq', 'qqq R xxx'] => 'bb');
-	test(['aa D ppp', 'ppp S xxx', 'bb R qqq', 'qqq D xxx'] => 'bb');
-	test(['aa D ppp', 'ppp S xxx', 'bb R qqq', 'qqq R xxx'] => 'bb');
-	test(['aa S ppp', 'ppp S xxx', 'bb R qq1', 'qq1 R qq2', 'qq2 R qq3', 'qq3 R qq4', 'qq4 R xxx'] => 'bb');
-}
+test(['aa D ppp', 'ppp D xxx', 'bb R xxx'] => 'aa');
+test(['aa R xxx', 'bb D qq1', 'qq1 D qq2', 'qq2 D xxx'] => 'bb');
+test(['aa S xxx', 'bb D xxx'] => 'bb');
+test(['aa S xxx', 'bb R xxx'] => 'bb');
+test(['aa S xxx', 'bb R qqq', 'qqq D xxx'] => 'bb');
+test(['aa S xxx', 'bb R qqq', 'qqq R xxx'] => 'bb');
+test(['aa D ppp', 'ppp S xxx', 'bb R qqq', 'qqq D xxx'] => 'bb');
+test(['aa D ppp', 'ppp S xxx', 'bb R qqq', 'qqq R xxx'] => 'bb');
+test(['aa S ppp', 'ppp S xxx', 'bb R qq1', 'qq1 R qq2', 'qq2 R qq3', 'qq3 R qq4', 'qq4 R xxx'] => 'bb');
 
